<resources>
    <string name="app_name">Facebook Login</string>
    <string name="signIn_name">Phone or email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="logIn">Log In</string>
    <string name="signUp">Sign Up</string>
    <string name="forgot">Forgot Password?</string>
    <string name="or">OR</string>
    <string name="new_account">Create New Facebook Account</string>
    <string name="signIn">Sign In</string>
    <string name="reset">Reset</string>
    <string name="welocme">Welcome</string>
</resources>