<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/rlBackground"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/facebook_background" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/rlBackground"
        android:layout_margin="24dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/signIn_name"
            android:inputType="textEmailAddress"
            android:padding="8dp" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="8dp" />

        <EditText
            android:id="@+id/etConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:padding="8dp"
            android:visibility="gone" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="#3366FF"
            android:padding="12dp"
            android:text="@string/logIn"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btnSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="#3366FF"
            android:padding="12dp"
            android:text="@string/signUp"
            android:textAllCaps="false"
            android:visibility="gone" />

        <Button
            android:id="@+id/btnReset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="#3366FF"
            android:padding="12dp"
            android:text="@string/reset"
            android:textAllCaps="false"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tvForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:text="@string/forgot"
            android:textColor="#3366FF"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/llLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:gravity="center"
            android:orientation="horizontal">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="#E7E7E7" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:text="@string/or" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="#E7E7E7" />

        </LinearLayout>

        <Button
            android:id="@+id/btnNewAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="#00CC00"
            android:text="@string/new_account"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btnSignin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="#00CC00"
            android:text="@string/signIn"
            android:textAllCaps="false"
            android:visibility="gone" />

    </LinearLayout>


</RelativeLayout>